fix direct rule enter and prepare some generalisation

--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.03  2022-11-03  lichtkind
+-------
+    * = feature expand
+    * + 
+    * ! no draw when enter new rule number in text field and press enter
+
 0.02  2022-11-03  lichtkind
 -------
     * = init release
