--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 0.03  2022-11-03  lichtkind
 -------
     * = feature expand
-    * + 
+    * + greater state alphabets for cells
     * ! no draw when enter new rule number in text field and press enter
 
 0.02  2022-11-03  lichtkind
