--- a/Changes
+++ b/Changes
@@ -1,9 +1,10 @@
-0.2  2023-01-25  lichtkind
+0.2  2023-01-30  lichtkind
 -------
     * = colors
     * * new Color panel with many functions (see Color sections in POD)
     * + setting changes trigger only a sketch for faster interactions
     * + draw button for full images
+    * ! rewritten eval compiler (didnt worked at all for many edge cases)
 
 0.1  2022-12-25  lichtkind
 -------
