--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.21 2023-02-23  lichtkind
+-------
+    * = colors
+    * ~ moved config to ~/.config/cellgraph
+    * ! switch current state on color panel now moves also HSL values
+    * ! grid computation bug
+    * ! fixed progressbar
+
 0.2  2023-01-30  lichtkind
 -------
     * = colors
