--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.27 2023-09-30  lichtkind
+-------
+    * = bug fix
+    * ? little POD update, new screengrab
+
 0.26 2023-09-30  lichtkind
 -------
     * = bug fix
