--- a/Changes
+++ b/Changes
@@ -1,3 +1,13 @@
+0.34 2025-01-25  lichtkind
+-------
+    * = bug fix release
+
+0.33 2025-01-25  lichtkind
+-------
+    * = bug fix release
+    * ! first row status is now saved in a settings file
+    * ! ensure config files have ending .ini
+
 0.32 2023-11-17  lichtkind
 -------
     * = bug fix release
