--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
-0.34 2025-01-25  lichtkind
+0.4 2025-01-26  lichtkind
 -------
-    * = bug fix release
+    * = minor feature release
+    * / code cleanup
 
 0.33 2025-01-25  lichtkind
 -------
