separation of state ans settings

--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 0.4 2025-01-26  lichtkind
 -------
     * = minor feature release
-    * / code cleanup
+    * ? increase GUI based documentation
+    * & code cleanup
 
 0.33 2025-01-25  lichtkind
 -------
