--- a/Changes
+++ b/Changes
@@ -16,6 +16,7 @@
     * ? better tool tips
     * & code cleanup
     * & faster start (does not sketch drawing twice)
+    * & full picture draw is now 3 times faster (dropped brush usage)
     * ! fix redraw blib bug
 
 0.33 2025-01-25  lichtkind
