--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 
+0.71 2025-02-22  lichtkind
+-------
+    * = cleanup fix release
+    * ? small POD fixes
+    * & remove dead code
+    * & separate defaut configs
+
 0.7 2025-02-20  lichtkind
 -------
     * = major feature release
@@ -26,7 +33,7 @@
 -------
     * = bug fix release
     * ! first row status is now saved in a settings file
-    * ! ensure config files have ending .ini
+    * ! ensure image settings files have ending .ini
 
 0.32 2023-11-17  lichtkind
 -------
@@ -56,7 +63,7 @@
 
 0.26 2023-09-30  lichtkind
 -------
-    * = bug fix
+    * = bug fix release
     * & adopt code to new GTC API
 
 0.25 2023-02-23  lichtkind
@@ -69,7 +76,7 @@
 
 0.2  2023-01-30  lichtkind
 -------
-    * = colors
+    * = major feature relese colors
     * * new Color panel with many functions (see Color sections in POD)
     * + setting changes trigger only a sketch for faster interactions
     * + draw button for full images
@@ -77,7 +84,7 @@
 
 0.1  2022-12-25  lichtkind
 -------
-    * = multi level fix
+    * = multi level bug fix release
     * + bring back cell mobility with previous fixed feature set
     * ? update docs
     * ! crashes on most buttons to get related rules
@@ -101,3 +108,4 @@
 
 
 TODO:
+ switch to prima widgt toolkit
