make main window smaller and resizeable

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 
 0.72 2025-02-22  lichtkind
 -------
+    * = cleanup fix release
+    * / making main window smaller
 
 0.71 2025-02-22  lichtkind
 -------
