make progressbar thinner and update readme

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 
+0.73 2025-02-27  lichtkind
+-------
+    * = fix release
+    / = make progress bar thinner
+
+
 0.72 2025-02-23  lichtkind
 -------
     * = fix release
