--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
 
-0.73 2025-03-17  lichtkind
+0.73 2025-03-27  lichtkind
 -------
     * = fix release
     / = make progress bar thinner
+    * ? small fixes in color set picker
     * ? small POD fixes
 
 0.72 2025-02-23  lichtkind
