--- a/Changes
+++ b/Changes
@@ -1,10 +1,15 @@
 
-0.73 2025-03-27  lichtkind
+0.74 2025-03-26  lichtkind
+-------
+    * = fix release
+
+0.73 2025-03-26  lichtkind
 -------
     * = fix release
     / = make progress bar thinner
-    * ? small fixes in color set picker
+    * ? align preview in color set picker
     * ? small POD fixes
+    * - remove a little dead code
 
 0.72 2025-02-23  lichtkind
 -------
