--- a/Changes
+++ b/Changes
@@ -6,7 +6,7 @@
 0.73 2025-03-26  lichtkind
 -------
     * = fix release
-    / = make progress bar thinner
+    * / = make progress bar thinner
     * ? align preview in color set picker
     * ? small POD fixes
     * - remove a little dead code
