--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
 0.74 2025-03-26  lichtkind
 -------
     * = fix release
+    * & refactor some GUI components
 
 0.73 2025-03-26  lichtkind
 -------
