--- a/Changes
+++ b/Changes
@@ -1,12 +1,16 @@
 
-0.74 2025-03-26  lichtkind
+0.8 2025-04-14  lichtkind
 -------
-    * = fix release
+    * = major fix release
+    * + display subrule occurance count in rules tab
+    * - removing rule count display (mostly pointless)
+    * ~ update about dialogue
+    * ~ update copyright year in dist.ini
     * & refactor some GUI components
 
 0.73 2025-03-26  lichtkind
 -------
-    * = fix release
+    * = minor fix release
     * / = make progress bar thinner
     * ? align preview in color set picker
     * ? small POD fixes
@@ -14,7 +18,7 @@
 
 0.72 2025-02-23  lichtkind
 -------
-    * = fix release
+    * = minor fix release
     * / making main window smaller
     * ? small POD fixes
     * ! fix tests
