fix test, release 0.81

--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 
 0.81 2025-04-14  lichtkind
 -------
-    * = major fix release
+    * = minor fix release
+    * ! fix tests
 
 0.8  2025-04-14  lichtkind
 -------
